--- a/ch6adapter/app/src/main/res/layout/activity_main.xml
+++ b/ch6adapter/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
+    android:orientation="vertical"
     tools:context="com.example.test.ch6adapter.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Spinner
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="wrap_content"
+        android:id="@+id/spinner"/>
 
-</android.support.constraint.ConstraintLayout>
+    <GridView
+        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:id="@+id/gridView"/>
+
+    <ListView
+        android:layout_height="150dp"
+        android:layout_width="match_parent"
+        android:id="@+id/listView"/>
+
+</LinearLayout>
